# rk_health_station

./: .gitignore  AGENTS.md  README.md  RK3588_Qt_AI开发必读手册.md
esp_fw/components/fall_classifier/: CMakeLists.txt  fall_classifier.cpp  idf_component.yml
esp_fw/components/fall_classifier/include/: fall_classifier.h
rk_app/: CMakeLists.txt
rk_app/docs/superpowers/plans/: 2026-04-16-action-classifier-rknn-implementation.md  2026-04-16-rk3588-fall-detection-backend-implementation.md  2026-04-17-fall-classification-realtime-output-implementation.md  2026-04-17-lstm-rknn-board-validation.md  2026-04-17-multi-person-fall-detection-implementation.md  2026-04-17-video-preview-fall-overlay-implementation.md  2026-04-18-ui-warmup-bytetrack-bugfixes.md  2026-04-19-test-video-input-mode.md  2026-04-20-track-icon-overlay-implementation.md
rk_app/docs/superpowers/specs/: 2026-04-16-rk3588-fall-detection-design.md  2026-04-16-stgcn-rknn-design.md  2026-04-17-bytetrack-fall-detection-design.md  2026-04-17-fall-classification-realtime-output-design.md  2026-04-17-multi-person-fall-detection-design.md  2026-04-17-video-preview-fall-overlay-design.md  2026-04-19-test-video-input-mode-design.md  2026-04-20-track-icon-overlay-design.md
rk_app/src/health_config_ui/: CMakeLists.txt  main.cpp
rk_app/src/health_config_ui/app/: config_editor_app.cpp  config_editor_app.h
rk_app/src/health_config_ui/widgets/: config_editor_window.cpp  config_editor_window.h  config_section_widget.cpp  config_section_widget.h
rk_app/src/health_falld/: CMakeLists.txt  main.cpp
rk_app/src/health_falld/action/: action_backend_kind.h  action_classifier.h  action_classifier_factory.cpp  action_classifier_factory.h  rknn_action_model_runner.cpp  rknn_action_model_runner.h  rknn_lstm_action_classifier.cpp  rknn_lstm_action_classifier.h  rule_based_action_classifier.cpp  rule_based_action_classifier.h  sequence_buffer.cpp  sequence_buffer.h  stgcn_action_classifier.cpp  stgcn_action_classifier.h  stgcn_preprocessor.cpp  stgcn_preprocessor.h  target_selector.cpp  target_selector.h
rk_app/src/health_falld/app/: fall_daemon_app.cpp  fall_daemon_app.h
rk_app/src/health_falld/debug/: fall_runtime_log_stats.cpp  fall_runtime_log_stats.h
rk_app/src/health_falld/domain/: fall_detector_service.cpp  fall_detector_service.h  fall_event_policy.cpp  fall_event_policy.h
rk_app/src/health_falld/ingest/: analysis_stream_client.cpp  analysis_stream_client.h  dmabuf_frame_reader.cpp  dmabuf_frame_reader.h  shared_memory_frame_reader.cpp  shared_memory_frame_reader.h
rk_app/src/health_falld/ipc/: fall_gateway.cpp  fall_gateway.h
rk_app/src/health_falld/pose/: nv12_preprocessor.cpp  nv12_preprocessor.h  pose_estimator.h  pose_stage_timing_logger.cpp  pose_stage_timing_logger.h  pose_types.h  rknn_pose_estimator.cpp  rknn_pose_estimator.h
rk_app/src/health_falld/runtime/: runtime_config.cpp  runtime_config.h
rk_app/src/health_falld/tracking/: association.cpp  association.h  byte_track_detection.h  byte_track_state.h  byte_tracker.cpp  byte_tracker.h  kalman_filter.cpp  kalman_filter.h  track_action_context.h  track_icon_registry.cpp  track_icon_registry.h  track_manager.cpp  track_manager.h  track_trace_logger.cpp  track_trace_logger.h  tracked_person.h
rk_app/src/health_ui/: CMakeLists.txt  main.cpp
rk_app/src/health_ui/app/: ui_app.cpp  ui_app.h
rk_app/src/health_ui/ipc_client/: fall_ipc_client.cpp  fall_ipc_client.h  ui_ipc_client.cpp  ui_ipc_client.h  video_ipc_client.cpp  video_ipc_client.h
rk_app/src/health_ui/pages/: alerts_page.cpp  alerts_page.h  dashboard_page.cpp  dashboard_page.h  device_approval_page.cpp  device_approval_page.h  device_detail_page.cpp  device_detail_page.h  device_list_page.cpp  device_list_page.h  history_page.cpp  history_page.h  settings_page.cpp  settings_page.h  video_monitor_page.cpp  video_monitor_page.h
rk_app/src/health_ui/widgets/: video_preview_consumer.cpp  video_preview_consumer.h  video_preview_widget.cpp  video_preview_widget.h
rk_app/src/health_videod/: CMakeLists.txt  main.cpp
rk_app/src/health_videod/analysis/: analysis_frame_converter.h  analysis_frame_source.h  analysis_output_backend.h  gstreamer_analysis_output_backend.cpp  gstreamer_analysis_output_backend.h  rga_frame_converter.cpp  rga_frame_converter.h  shared_memory_frame_ring.cpp  shared_memory_frame_ring.h
rk_app/src/health_videod/app/: video_daemon_app.cpp  video_daemon_app.h
rk_app/src/health_videod/core/: video_service.cpp  video_service.h  video_storage_service.cpp  video_storage_service.h
rk_app/src/health_videod/debug/: video_runtime_log_stats.cpp  video_runtime_log_stats.h
rk_app/src/health_videod/ipc/: video_gateway.cpp  video_gateway.h
rk_app/src/health_videod/pipeline/: analysis_frame_publisher.cpp  analysis_frame_publisher.h  dma_buffer_allocator.cpp  dma_buffer_allocator.h  external_gstreamer_runner.cpp  external_gstreamer_runner.h  gst_appsink_frame_dispatcher.cpp  gst_appsink_frame_dispatcher.h  gst_bus_monitor.cpp  gst_bus_monitor.h  gst_command_builder.cpp  gst_command_builder.h  gst_process_runner.cpp  gst_process_runner.h  gstreamer_video_pipeline_backend.cpp  gstreamer_video_pipeline_backend.h  inprocess_gstreamer_pipeline.cpp  inprocess_gstreamer_pipeline.h  inprocess_launch_description_builder.cpp  inprocess_launch_description_builder.h  multipart_jpeg_parser.cpp  multipart_jpeg_parser.h  pipeline_runner_factory.cpp  pipeline_runner_factory.h  pipeline_session.h  preview_stream_reader.cpp  preview_stream_reader.h  video_pipeline_backend.h  video_pipeline_runner.h
rk_app/src/healthd/: CMakeLists.txt  main.cpp
rk_app/src/healthd/alerts/: alert_engine.cpp  alert_engine.h
rk_app/src/healthd/app/: daemon_app.cpp  daemon_app.h
rk_app/src/healthd/device/: auth_manager.cpp  auth_manager.h  device_manager.cpp  device_manager.h
rk_app/src/healthd/host/: host_wifi_status.h  host_wifi_status_provider.cpp  host_wifi_status_provider.h
rk_app/src/healthd/ipc_server/: ui_gateway.cpp  ui_gateway.h
rk_app/src/shared/: CMakeLists.txt
rk_app/src/tests/: CMakeLists.txt
(+284 files in other folders)
